More details about the liason with css

--- a/charter-drafts/editing-2021.html
+++ b/charter-drafts/editing-2021.html
@@ -325,7 +325,7 @@
             <dt><a href="https://www.w3.org/2019/webapps">WebApps Working Group</a></dt>
             <dd>Overlapping specifications such as UIEvents.</dd>
             <dt><a href="https://wiki.csswg.org/">CSS Working Group<a></dt>
-            <dd>Overlapping specifications such as Highlight API.</dd>
+            <dd>Overlapping specifications such as Highlight API or the CSS Basic User Interface Module.</dd>
             <dt><a href="https://www.w3.org/community/wicg/">Web Platform Incubator Community Group</a></dt>
             <dd>This group provides a lightweight venue for proposing, incubating, and discussing new web platform features. The Editing Working group can incubate and review new proposals that are within scope of our charter within the WICG. Once such WICG-incubated proposal is implemented and available in at least one major browser, and has support from one more, it may be adopted by the Editing Working group.</i>
         </dd>
